Kubernetes/CarService_Database_Config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carservice-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: carservice-database
          image: postgres:12
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
