Kubernetes/CarService_Frontend_Config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carservice-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carservice-frontend
  template:
    metadata:
      labels:
        app: carservice-frontend
    spec:
      containers:
        - name: carservice-frontend
          image: carservice_angular_frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: carservice-frontend
  labels:
    name: carservice-frontend
spec:
  selector:
    app: carservice-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
