Kubernetes/CarService_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carservice-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carservice-frontend
                port:
                  number: 80
